# auto_nfe_app

./: .gitignore  .pylintrc  build.ps1  icon.xcf  installer.iss  pyproject.toml
.agent/rules/: code-style-guide.md  flet-rules.md  packages.md
installer/: build_installer.ps1  installer.iss
src/: constants.py  main.py
src/assets/: empresas_nfse_template.toml  profile_template.toml
src/components/: download_btn.py  empresas_editor_dialog.py  file_input.py  load_profile_btn.py  toast.py  toml_editor_dialog.py
src/components/consultas/: nfse_web_form.py  planilha_form.py
src/config/: paths.py  template_utils.py
src/config/templates/: empresas_nfe_template.toml
src/utils/: utils.py
src/views/: home.py  nfe.py  nfse.py
