[project]
name = "auto-nfe-app"
version = "0.11.0"
requires-python = ">=3.12,<3.15"

dependencies = ["auto-nfe @ file:///F:/Dev/nfe_automatico", "flet>=0.80.1"]

[build-system]
requires = ["setuptools>=80.0"]


[tool.flet]
compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile
include = ["F:/Dev/nfe_automatico/src/auto_nfe/schemas/*.xml"]
additional_files = [
    { source = "src/auto_nfe/schemas/*.xml", target = "auto_nfe/schemas" },
]
assets = "assets"

copyright = "Copyright (C) 2026 by Andre Grassi de Jesus"

[tool.flet.app]
path = "src"

[tool.setuptools.package-data]
"auto_nfe" = ["schemas/*.xml"]
"auto_nfe.schemas" = ["*.xml"]
